[tool.poetry]
name = "housing-prices-analysis"
version = "0.1.0"
description = ""
authors = ["bjamyl <alhassanjamil0@gmail.com>"]
readme = "README.md"
packages = [{include = "housing_prices_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
